--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,69 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>SkeletonAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding home-content">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  
+  <h1 class="titulo" [@tituloAnimado]="'activo'">
+    Bienvenido!
+  </h1>
+
+
+  <p class="usuario-linea">
+    Usuario: <span>{{ usuarioRecibido }}</span>
+  </p>
+
+
+  <ion-segment [(ngModel)]="segment" class="segment-home">
+    <ion-segment-button value="datos">
+      <ion-label>Mis Datos</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="experiencia">
+      <ion-label>Experiencia</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="certificaciones">
+      <ion-label>Certificaciones</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+ 
+  <div [ngSwitch]="segment">
+    <app-mis-datos *ngSwitchCase="'datos'"></app-mis-datos>
+    <app-experiencia-laboral *ngSwitchCase="'experiencia'"></app-experiencia-laboral>
+    <app-certificaciones *ngSwitchCase="'certificaciones'"></app-certificaciones>
   </div>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title></ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-button expand="block" routerLink="/api-local">
+        Formulario de Registro
+      </ion-button>
+
+      <ion-button expand="block" routerLink="/api-external">
+        POST (Externa)
+      </ion-button>
+
+      <ion-button expand="block" routerLink="/mapa">
+        Mapa & GPS
+      </ion-button>
+
+      <ion-button expand="block" routerLink="/camera">
+        Cámara
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+
+  <p class="footer">
+    App desarrollada por Christian Fuentes
+  </p>
+
 </ion-content>
