--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,60 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>SkeletonAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding login-content">
+
+ 
+  <h1 class="app-title">SkeletonAPP</h1>
+  <p class="app-subtitle">Aquí comienza todo</p>
+
+
+  <h2 class="welcome-text">Bienvenido!</h2>
+
+
+  <form (ngSubmit)="agregar()" class="form-login">
+
+   
+    <ion-item class="input-line">
+      <ion-label position="stacked">Usuario</ion-label>
+      <ion-input
+        [(ngModel)]="user.usuario"
+        name="usuario"
+        type="text"
+        minlength="3"
+        maxlength="8"
+        required>
+      </ion-input>
+    </ion-item>
+
+    
+    <ion-item class="input-line">
+      <ion-label position="stacked">Password</ion-label>
+      <ion-input
+        [(ngModel)]="user.password"
+        name="password"
+        type="password"
+        minlength="4"
+        maxlength="4"
+        required>
+      </ion-input>
+    </ion-item>
+
+   
+    <ion-button
+      expand="block"
+      type="submit"
+      class="btn-ingresar">
+      Ingresar
+    </ion-button>
+
+  </form>
+
+
+  <p class="crear-cuenta">
+    Crea tu cuenta gratis
+  </p>
+
 </ion-content>
